# desktop/src/open-api/model/upsertItemCommand.ts
@@ -18,6 +18,14 @@ export interface UpsertItemCommand {
      */
     amount: string;
     /**
+     * Quantity purchased
+     */
+    quantity?: string;
+    /**
+     * Price for a single unit
+     */
+    unitPrice?: string;
+    /**
      * User foreign key
      */
     chargedToUserId?: number;
@@ -25,6 +33,10 @@ export interface UpsertItemCommand {
      * Item name
      */
     name: string;
+    /**
+     * Item name in Chinese
+     */
+    nameZh?: string;
     /**
      * Receipt foreign key
      */
